// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI dIoSYo sc-cbTzjv bxHvyV"
    >
      <div
        class="sc-lkgTHX iTiSHO"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI jrnTxU sc-cbTzjv bxHvyV"
    >
      <div
        class="sc-lkgTHX crcbRs"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-jlRLRk fKFzkH sc-cbTzjv bxHvyV"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dUbtfd duIhFM dRqjPA"
      >
        <div
          class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI dIoSYo"
        >
          <div
            class="sc-lkgTHX iTiSHO"
          />
          <div
            class="sc-fKVqWL hOcWtv sc-bBHxTw fbMhcE"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-htJRVC fmoRMP"
      >
        <div
          class="sc-gKclnd exdBHI sc-iCfMLu eWtVmG"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI dIoSYo sc-cbTzjv bxHvyV"
    >
      <div
        class="sc-lkgTHX iTiSHO"
      />
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw fbMhcE"
      >
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw kprsfI"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT cGuTUx"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI dIoSYo sc-cbTzjv bxHvyV"
    >
      <div
        class="sc-lkgTHX iTiSHO"
      />
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw fbMhcE"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
